--- a/view/Screen4ReviewPage.fragment.xml
+++ b/view/Screen4ReviewPage.fragment.xml
@@ -13,9 +13,9 @@
 					<Input class="inputForm" value="" enabled="false" id="adSoyadRew4"/>
 					<core:Title/>
 					<Label text="TC Kimlik No"/>
-					<Input class="inputForm" value="" enabled="false"  id="tcRew4"/>
+					<Input class="inputForm" value="" enabled="false" id="tcRew4"/>
 					<Label text="Doğum Tarihi"/>
-					<DatePicker class="inputForm" value="" enabled="false"  id="dogumTarihRew4"/>
+					<DatePicker class="inputForm" value="" enabled="false" id="dogumTarihRew4"/>
 					<Label text="Geçerlilik Tarihi"/>
 					<DatePicker class="inputForm" value="" enabled="false" id="gecerTarihRew4"/>
 				</form:content>
@@ -30,7 +30,7 @@
 					<Label text="Personel Alt Alanı"/>
 					<Input class="inputForm" value="" enabled="false" id="perAltAlanRew4"/>
 					<Label text="İş Alanı"/>
-					<Input class="inputForm" value="" enabled="false" id="isAlanRew4" />
+					<Input class="inputForm" value="" enabled="false" id="isAlanRew4"/>
 					<Label text="Şirket"/>
 					<Input class="inputForm" value="" enabled="false" id="sirketRew4"/>
 					<Label text="İş Anahtarı"/>
@@ -67,7 +67,7 @@
 					<Label text="İş Alanı"/>
 					<Input class="inputForm" value="" enabled="false" id="inputIsAlanRew4"/>
 					<Label text="İş Anahtarı"/>
-					<Input class="inputForm" value="" enabled="false"  id="inputIsAnahRew4"/>
+					<Input class="inputForm" value="" enabled="false" id="inputIsAnahRew4"/>
 					<Label text="Org. Birimi"/>
 					<Input class="inputForm" value="" enabled="false" id="inputOrgBirRew4"/>
 					<Label text="Çalışan Grb."/>
@@ -108,29 +108,41 @@
 					<Table id="idLang4" growing="true" growingThreshold="10" inset="false" items="{ path: '/results', sorter: { path: 'Sptxt' } }">
 						<columns>
 							<Column width="12em">
+								<Text text="Dil Türü"/>
+							</Column>
+							<Column width="12em">
 								<Text text="Yabancı Dil"/>
 							</Column>
 							<Column width="12em">
 								<Text text="Puan"/>
 							</Column>
 							<Column width="12em">
-								<Text text="Tavan"/>
+								<Text text="Sınav Tarihi"/>
 							</Column>
 							<Column width="12em">
-								<Text text="Yazılı"/>
+								<Text text="Yazma"/>
 							</Column>
 							<Column width="12em">
-								<Text text="Sözlü"/>
+								<Text text="Okuma"/>
+							</Column>
+							<Column width="12em">
+								<Text text="Dinleme"/>
+							</Column>
+							<Column width="12em">
+								<Text text="Genel"/>
 							</Column>
 						</columns>
 						<items>
 							<ColumnListItem>
 								<cells>
-									<Text text="{Sptxt}" id="yabanciDilRew4"/>
-									<Text text="{Puan}" id="puanRew4"/>
-									<Text text="{Tavan}" id="tavanRew4"/>
-									<Text text="{Yazili}" id="yaziliRew4"/>
-									<Text text="{Sozlu}" id="sozluRew4"/>
+									<Text text="{Spras}"/>
+									<Text text="{Sptxt}"/>
+									<Text text="{Puan}"/>
+									<Text text="{SinavTarihi}"/>
+									<Text text="{Yazma}"/>
+									<Text text="{Okuma}"/>
+									<Text text="{Dinleme}"/>
+									<Text text="{Genel}"/>
 								</cells>
 							</ColumnListItem>
 						</items>
@@ -150,15 +162,15 @@
 								<Text text="Puan"/>
 							</Column>
 							<Column width="12em">
-								<Text text="Tavan"/>
+								<Text text="Sınav Tarihi"/>
 							</Column>
 						</columns>
 						<items>
 							<ColumnListItem>
 								<cells>
-									<Text text="{SinavTuru}" id="sinavTuruRew4"/>
-									<Text text="{Puan}" id="puanZihinRew4"/>
-									<Text text="{Tavan}" id="tavanZihinRew4"/>
+									<Text text="{SinavTuru}"/>
+									<Text text="{Puan}"/>
+									<Text text="{SinavTarihi}"/>
 								</cells>
 							</ColumnListItem>
 						</items>
@@ -168,8 +180,7 @@
 			<form:SimpleForm title="6. PD Sonuçları" minWidth="1024" editable="false" layout="ResponsiveGridLayout">
 				<form:content>
 					<core:Title/>
-					<Table id="idPd4"  growing="true" growingThreshold="10" width="100%" inset="false"
-						items="{ path: '/results', sorter: { path: 'Pdyear' } }">
+					<Table id="idPd4" growing="true" growingThreshold="10" width="100%" inset="false" items="{ path: '/results', sorter: { path: 'Pdyear' } }">
 						<columns>
 							<Column width="12em">
 								<Text text="Yıl"/>
