--- a/view/Screen5ReviewPage.fragment.xml
+++ b/view/Screen5ReviewPage.fragment.xml
@@ -108,29 +108,41 @@
 					<Table id="idLang5" growing="true" growingThreshold="10" inset="false" items="{ path: '/results', sorter: { path: 'Sptxt' } }">
 						<columns>
 							<Column width="12em">
+								<Text text="Dil Türü"/>
+							</Column>
+							<Column width="12em">
 								<Text text="Yabancı Dil"/>
 							</Column>
 							<Column width="12em">
 								<Text text="Puan"/>
 							</Column>
 							<Column width="12em">
-								<Text text="Tavan"/>
+								<Text text="Sınav Tarihi"/>
 							</Column>
 							<Column width="12em">
-								<Text text="Yazılı"/>
+								<Text text="Yazma"/>
 							</Column>
 							<Column width="12em">
-								<Text text="Sözlü"/>
+								<Text text="Okuma"/>
+							</Column>
+							<Column width="12em">
+								<Text text="Dinleme"/>
+							</Column>
+							<Column width="12em">
+								<Text text="Genel"/>
 							</Column>
 						</columns>
 						<items>
 							<ColumnListItem>
 								<cells>
-									<Text text="{Sptxt}" id="yabanciDilRew5"/>
-									<Text text="{Puan}" id="puanRew5"/>
-									<Text text="{Tavan}" id="tavanRew5"/>
-									<Text text="{Yazili}" id="yaziliRew5"/>
-									<Text text="{Sozlu}" id="sozluRew5"/>
+									<Text text="{Spras}"/>
+									<Text text="{Sptxt}"/>
+									<Text text="{Puan}"/>
+									<Text text="{SinavTarihi}"/>
+									<Text text="{Yazma}"/>
+									<Text text="{Okuma}"/>
+									<Text text="{Dinleme}"/>
+									<Text text="{Genel}"/>
 								</cells>
 							</ColumnListItem>
 						</items>
@@ -150,15 +162,15 @@
 								<Text text="Puan"/>
 							</Column>
 							<Column width="12em">
-								<Text text="Tavan"/>
+								<Text text="Sınav Tarihi"/>
 							</Column>
 						</columns>
 						<items>
 							<ColumnListItem>
 								<cells>
-									<Text text="{SinavTuru}" id="sinavTuruRew5"/>
-									<Text text="{Puan}" id="puanZihinRew5"/>
-									<Text text="{Tavan}" id="tavanZihinRew5"/>
+									<Text text="{SinavTuru}"/>
+									<Text text="{Puan}"/>
+									<Text text="{SinavTarihi}"/>
 								</cells>
 							</ColumnListItem>
 						</items>
