--- a/view/Screen2.view.xml
+++ b/view/Screen2.view.xml
@@ -72,11 +72,32 @@
 								labelSpanM="4" labelSpanXL="4" layout="ResponsiveGridLayout" maxContainerCols="3">
 								<form:content>
 									<core:Title/>
-									<Label text="Gerçek Ayrılma Nedeni"/>
-									<Input class="inputForm" id="gercekAyrilmaKod2" placeholder="Gerçek Ayrılma Nedeni" liveChange="additionalInfoValidation"
-										showSuggestion="true" showValueHelp="true" type="Text" valueHelpRequest="handleValueHelpAyrilmaGercek" valueState="{/gercekayrilmaState}">
+									<Label text="İşten Çıkış Tipi"/>
+									<Input class="inputForm" id="gercekAyrilmaKod2" placeholder="İşten Çıkış Tipi" liveChange="additionalInfoValidation"
+										showSuggestion="true" showValueHelp="true" type="Text" valueHelpRequest="handleValueHelpAyrilmaTip" valueState="{/gercekayrilmaState}">
 										<suggestionItems>
-											<core:Item key="" text=""/>
+											<core:Item key="{ZzterminTyp}" text="{ZztermintypTxt}"/>
+										</suggestionItems>
+									</Input>
+									<Label text="Gerçek Ayrılma Nedeni 1"/>
+									<Input class="inputForm" id="gercekNeden1" placeholder="Gerçek Ayrılma Nedeni" liveChange="additionalInfoValidation"
+										showSuggestion="true" showValueHelp="true" type="Text" valueHelpRequest="handleValueHelpNeden1" valueState="{/gercekneden1State}">
+										<suggestionItems>
+											<core:Item key="{ZzterminCode}" text="{ZztermincodeTxt}"/>
+										</suggestionItems>
+									</Input>
+									<Label text="Gerçek Ayrılma Nedeni 2"/>
+									<Input class="inputForm" id="gercekNeden2" placeholder="Gerçek Ayrılma Nedeni" liveChange="additionalInfoValidation"
+										showSuggestion="true" showValueHelp="true" type="Text" valueHelpRequest="handleValueHelpNeden2" valueState="{/gercekneden2State}">
+										<suggestionItems>
+											<core:Item key="{ZzterminCode}" text="{ZztermincodeTxt}"/>
+										</suggestionItems>
+									</Input>
+									<Label text="Gerçek Ayrılma Nedeni 3"/>
+									<Input class="inputForm" id="gercekNeden3" placeholder="Gerçek Ayrılma Nedeni" liveChange="additionalInfoValidation"
+										showSuggestion="true" showValueHelp="true" type="Text" valueHelpRequest="handleValueHelpNeden3" valueState="{/gercekneden3State}">
+										<suggestionItems>
+											<core:Item key="{ZzterminCode}" text="{ZztermincodeTxt}"/>
 										</suggestionItems>
 									</Input>
 									<core:Title/>
