--- a/view/Screen1Position.fragment.xml
+++ b/view/Screen1Position.fragment.xml
@@ -1,5 +1,10 @@
-<core:FragmentDefinition xmlns:core="sap.ui.core" xmlns:f="sap.ui.layout.form" xmlns:l="sap.ui.layout" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
+<core:FragmentDefinition xmlns:core="sap.ui.core" xmlns:f="sap.ui.layout.form" xmlns:l="sap.ui.layout" xmlns="sap.m"
+	xmlns:mvc="sap.ui.core.mvc">
 	<Dialog title="Pozisyon" contentHeight="40%" contentWidth="50%">
+		<buttons>
+			<Button id="btnInFragment1" press="onSelect" text="Seç" type="Emphasized"/>
+			<Button id="btnInFragment2" press="onClose" text="Kapat" type="Emphasized"/>
+		</buttons>
 		<content>
 			<mvc:XMLView viewName="ZHR_144.view.Position"/>
 		</content>
