--- a/view/Screen6.view.xml
+++ b/view/Screen6.view.xml
@@ -65,7 +65,12 @@
 									<Input class="inputForm" value="" enabled="false" id="diger6"/>
 									<core:Title text="Yeni"/>
 									<Label text="Pozisyon"/>
-									<Input class="inputForm" value="" id="InputPosAd6"/>
+									<Input class="inputForm" id="InputPosAd6" value="" placeholder="Pozisyon" liveChange="additionalInfoValidation" showSuggestion="true"
+										showValueHelp="true" suggestionItems="{/PozisyonSet}" type="Text" valueHelpRequest="handleValueHelpPoz" valueState="{/pozState}">
+										<suggestionItems>
+											<core:Item key="{Level}" text="{Stext}"/>
+										</suggestionItems>
+									</Input>
 									<Label text="Personel Alanı"/>
 									<Input class="inputForm" id="InputPerAlan6" placeholder="Personel Alanı" liveChange="additionalInfoValidation" showSuggestion="true"
 										showValueHelp="true" suggestionItems="{/PerAlanSet}" type="Text" valueHelpRequest="handleValueHelpPerA" valueState="{/perAlanState}">
