--- a/view/Screen1ReviewPage.fragment.xml
+++ b/view/Screen1ReviewPage.fragment.xml
@@ -59,7 +59,7 @@
 			<form:SimpleForm title="4. Yabancı Dil" minWidth="1024" editable="false" layout="ResponsiveGridLayout">
 				<form:content>
 					<core:Title/>
-					<Table id="idDil" growing="true" growingThreshold="10" inset="false" items="{ path: '/results', sorter: { path: 'Sptxt' } }">
+					<Table id="idDil" growing="true" growingThreshold="10" inset="false" items="{ path: '/results'}">
 						<columns>
 							<Column width="12em">
 								<Text text="Dil Türü"/>
@@ -107,7 +107,7 @@
 				<form:content>
 					<core:Title/>
 					<Table id="idZihinsel" growing="true" growingThreshold="10" width="100%" inset="false"
-						items="{ path: '/results', sorter: { path: 'SinavTuru' } }">
+						items="{ path: '/results'}">
 						<columns>
 							<Column width="12em">
 								<Text text="Sınav Türü"/>
