--- a/view/Screen1Approve.view.xml
+++ b/view/Screen1Approve.view.xml
@@ -102,7 +102,7 @@
 														labelSpanM="4" labelSpanXL="4" layout="ResponsiveGridLayout" maxContainerCols="3" title="Yabancı Dil">
 														<form:content>
 															<Table growing="true" growingThreshold="10" id="idLanguageTableApprove" inset="false"
-																items="{ path: '/results', sorter: { path: 'Sptxt' } }" mode="SingleSelectMaster">
+																items="{ path: '/results'}" mode="SingleSelectMaster">
 																<columns>
 																	<Column width="12em">
 																		<Text text="Dil Türü"/>
@@ -152,7 +152,7 @@
 														labelSpanM="4" labelSpanXL="4" layout="ResponsiveGridLayout" maxContainerCols="3" title="Zihinsel Beceri">
 														<form:content>
 															<Table growing="true" growingThreshold="10" id="idAbilityTableApprove" inset="false"
-																items="{ path: '/results', sorter: { path: 'SinavTuru' } }" mode="SingleSelectMaster">
+																items="{ path: '/results'}" mode="SingleSelectMaster">
 																<columns>
 																	<Column width="12em">
 																		<Text text="Sınav Türü"/>
