--- a/view/Screen3.view.xml
+++ b/view/Screen3.view.xml
@@ -95,9 +95,9 @@
 									<Label text="Şirket"/>
 									<Input class="inputForm" value="" id="InputSirket3"/>
 									<Label text="İş Anahtarı"/>
-									<Input class="inputForm" value="" id="InputIsAnahtari3" enabled="true"/>
+									<Input class="inputForm" value="" id="InputIsAnahtari3" enabled="false"/>
 									<Label text="Org. Birimi"/>
-									<Input class="inputForm" value="" id="InputOrgBirim3"  enabled="true"/>
+									<Input class="inputForm" value="" id="InputOrgBirim3"  enabled="false"/>
 									<Label text="Çalışan Grb."/>
 									<Input class="inputForm" id="InputCalisanGrp3" placeholder="Çalışan Grb." liveChange="additionalInfoValidation" showSuggestion="true"
 										showValueHelp="true" suggestionItems="{/CalisanGrSet}" type="Text" valueHelpRequest="handleValueHelp" valueState="{/calisanGrbState}">
