--- a/view/Screen4.view.xml
+++ b/view/Screen4.view.xml
@@ -96,9 +96,9 @@
 									<Label text="Şirket"/>
 									<Input class="inputForm" value="" id="InputSirket4"/>
 									<Label text="İş Anahtarı"/>
-									<Input class="inputForm" value="" id="InputIsAnahtari4"  enabled="true"/>
+									<Input class="inputForm" value="" id="InputIsAnahtari4"  enabled="false"/>
 									<Label text="Org. Birimi"/>
-									<Input class="inputForm" value="" id="InputOrgBirim4"  enabled="true"/>
+									<Input class="inputForm" value="" id="InputOrgBirim4"  enabled="false"/>
 									<Label text="Çalışan Grb."/>
 									<Input class="inputForm" id="InputCalisanGrp4" placeholder="Çalışan Grb." liveChange="additionalInfoValidation" showSuggestion="true"
 										showValueHelp="true" suggestionItems="{/CalisanGrSet}" type="Text" valueHelpRequest="handleValueHelp" valueState="{/calisanGrbState}">
